--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 LuaSignal v0.1
-Jesse Luehrs (jluehrs2@uiuc.edu)
+Vadim A. Misbakh-Soloviov (mva[at]mva.name)
 
 OVERVIEW
 ========
@@ -10,6 +10,7 @@ INSTALL
 =======
 To install, modify Make.config to point to the appropriate paths, then type
 'make' and 'make install'.
+TODO: Fix Makefile to understand configuration paramaters instead of Make.config.
 
 DOCUMENTATION
 =============
@@ -33,6 +34,7 @@ CHANGES
 
 COPYRIGHT AND LICENSE
 =====================
+Copyright (C) 2012 Vadim A. Misbakh-Soloviov
 Copyright (C) 2007 Jesse Luehrs
 
 This code is distributed under the MIT license; a copy is in the LICENSE file
